<resources>
	<string name="app_name">Social Sportz</string>
	<string name="app_desc">Be Social &amp; Play Healthy</string>
	<string name="app_started">Get Started with Social Sportz</string>
	<string name="facebook_app_id">536756080402701</string>
	<string name="fb_login_protocol_scheme">fb536756080402701</string>
	<string name="google_key">AIzaSyAl8n3WN8hX_-AALYN9knmr4ZrtXbfX-RA</string>
	<string name="navigation_drawer_open">Open</string>
	<string name="navigation_drawer_close">Close</string>
	<string name="facility_empty">Facility/Academy Yet To Be Added!</string>
	<string name="sports_empty">Sports Yet To Be Added!</string>
	<string name="amenity_empty">Amenity Yet To Be Added!</string>
	<string name="achieve_empty">Achievements Yet To Be Added!</string>
	<string name="timing_empty">Facility Timing Yet To Be Added!</string>
	<string name="batch_slot_empty">Batch/Slot Yet To Be Added!</string>
	<string name="events_empty">Events Yet To Be Added!</string>
	<string name="offline_booking_empty">Offline Booking Yet To Be Added!</string>
	<string name="booking_empty">Booking Yet To Be Added!</string>
	<string name="review_empty">Review Yet To Be Received!</string>
	<string name="enquiry_empty">Enquiry Yet To Be Received!</string>
	<string name="notification_empty">Notifications Yet To Be Received!</string>
	<string name="favroute_empty">Favourite Yet To Be Received!</string>
	<string name="email_alert_empty">Email Alert Yet To Be Received!</string>
	<string name="event_dash">No Latest Events!</string>
	<string name="academy_empty">Academy Yet To Be Added!</string>
	<string name="facility_empty_list">Facility Yet To Be Added!</string>
	<string name="enquiry_dash">No Latest Enquiry!</string>
	<string name="ok">OK</string>
	<string name="edit_txt">Edit</string>
	<string name="delete_txt">Delete</string>
	<string name="see_all">See All</string>
	<string name="add">Add</string>
	<string name="add_new">+ Add</string>
	<string name="book">Book Now</string>
	<string name="Rs">\u20B9</string>
	<string name="Rss">(-)</string>
	<string name="Rsss">(-)\u20B9 0</string>
	<string name="price_txt">Price</string>
	<string name="price_hint">\u20B9 5000</string>
	<string name="see">See</string>
	<string name="hide">Hide</string>
	<string name="checkout">Checkout</string>
	<string name="action">Action</string>
	<string name="fullname_hint">Fullname</string>
	<string name="contact_person_name">Contact Person Name</string>
	<string name="contact_person_email">Contact Person Email</string>
	<string name="contact_person_number">Contact Person Number</string>
	<string name="email_hint">Email</string>
	<string name="email_id_hint">Email Address</string>
	<string name="phone_hint">Phone Number</string>
	<string name="password_hint">Password</string>
	<string name="con_password_hint">Confirm Password</string>
	<string name="address_hint">Enter Address</string>
	<string name="subarea_hint">Enter SubArea</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="sign_up_txt">SignUp</string>
	<string name="login_txt">Login</string>
	<string name="signin_text">Login to Social Sportz</string>
	<string name="signup_user_text">Register as Player</string>
	<string name="signup_owner_text">Register as Partner</string>
	<string name="login_have_account">Don\'t have an account?</string>
	<string name="signup_txt">SIGNUP</string>
	<string name="login_or">OR</string>
	<string name="login_sign_up_with">SignUp With</string>
	<string name="login_sign_up_withh">Only Player</string>
	<string name="sign_up_condition">By signing, I agree to all Terms and Conditions of Social Sportz</string>
	<string name="error_invalid_email">This email id is invalid</string>
	<string name="error_invalid_credential">Invalid Input</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_invalid_phone">This phone is incorrect</string>
	<string name="error_cannot_be_empty">Field can not be empty!</string>
	<string name="forgot">Forgot</string>
	<string name="your_password">Your Password</string>
	<string name="forgot_password_msg">Link has been sent to your Email Address</string>
	<string name="forgot_password_desc">Need your registered email address to send reset password request</string>
	<string name="forgot_submit">Submit</string>
	<string name="reset_password">Reset Password</string>
	<string name="old_password">Old Password</string>
	<string name="new_password">New Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="reset_submit">Reset Password</string>
	<string name="congratulation">CONGRATULATIONS</string>
	<string name="your_mobile_verified">Your Account has been verified successfully</string>
	<string name="continue_profile">Click continue to complete your profile</string>
	<string name="continue_txt">Continue</string>
	<string name="thanks_txt">Thanks for Signing Up!</string>
	<string name="thanks_desc">We have send a verification code to your email &amp; mobile</string>
	<string name="thanks_descc">Thank you ! Your feedback has been submitted.</string>
	<string name="otp_msg">Enter the otp sent to your mobile number</string>
	<string name="laert_msg">When pressing the back button all selected slot/batch will be removed!</string>
	<string name="expire_otp">OTP will expire in</string>
	<string name="enter_otp">Enter OTP</string>
	<string name="verify_otp">Verify OTP</string>
	<string name="resend_otp">Resend OTP</string>
	<string name="thanks_msg">Thank you for sharing interest in Social Sportz!</string>
	<string name="thanks_msgg">Thank you!</string>
	<string name="welcome_msg">Your account will be activated shortly.</string>
	<string name="welcome_review">Your details are under review.</string>
	<string name="continue_dashboard">Continue To Dashboard</string>
	<string name="user_text">User</string>
	<string name="owner_text">Facility/Academy</string>
	<string name="facility">Facility</string>
	<string name="academy">Academy</string>
	<string name="gender_text">GENDER</string>
	<string name="male_text">MALE</string>
	<string name="female_text">FEMALE</string>
	<string name="other_text">OTHER</string>
	<string name="profile_status">Profile Status</string>
	<string name="profile_is">Profile</string>
	<string name="profile_to">completed</string>
	<string name="profile_desc">Your Profile is 100% complete</string>
	<string name="profile_complete">Complete Profile</string>
	<string name="do_it_later">Do This Later</string>
	<string name="next">NEXT</string>
	<string name="prev">PREV</string>
	<string name="full_name">FullName</string>
	<string name="email_id">Email Id</string>
	<string name="contact_number">Contact Number</string>
	<string name="alternate_contact">Alternate Contact Number</string>
	<string name="locality">Locality</string>
	<string name="houseno_flatno_floor">House No/Flat No/Floor No</string>
	<string name="address">Address</string>
	<string name="subarea">Colony/Street/Locality</string>
	<string name="gaddrr">City/State/Country</string>
	<string name="city">City</string>
	<string name="pincode">Pincode</string>
	<string name="gender">Gender</string>
	<string name="fullname_ht">Contact Person Name</string>
	<string name="emailid_hint">Contact Person Email</string>
	<string name="contact_hint">Enter 10 Digit Mobile No</string>
	<string name="locality_hint">Enter Locality</string>
	<string name="pr_address_hint">Enter Address</string>
	<string name="city_hint">Enter City</string>
	<string name="pincode_hint">Enter Pincode</string>
	<string name="facility_name">Facility Name</string>
	<string name="facility_namee">Facility Name:</string>
	<string name="academy_name">Academy Name</string>
	<string name="open_close_timing">Open/Close Timings</string>
	<string name="description">Description</string>
	<string name="event_description">Event Description</string>
	<string name="achievement_if_any">Achievement (If Any)</string>
	<string name="achievement">Achievement</string>
	<string name="upload_logo">Upload Logo</string>
	<string name="upload_banner">Upload Banner</string>
	<string name="add_banner">Add Banner</string>
	<string name="add_logo">Add Logo</string>
	<string name="save_text">Save</string>
	<string name="save_n_continue">Save &amp; Continue</string>
	<string name="save_n_create">Save &amp; Create</string>
	<string name="achievement_title">Reward Title</string>
	<string name="achievement_type">Reward Type</string>
	<string name="upload_image">Upload Image</string>
	<string name="image1">Image1</string>
	<string name="image2">Image2</string>
	<string name="facility_name_hint">Enter Facility Name</string>
	<string name="academy_name_hint">Enter Academy Name</string>
	<string name="time_hint">Open/Close Time</string>
	<string name="description_hint">Enter Facility Description</string>
	<string name="achievement_hint">Enter Achievements Title</string>
	<string name="achievement_type_hint">Enter Achievements Type</string>
	<string name="add_achievement">Add Achievement</string>
	<string name="view_achievement">View Achievement</string>
	<string name="add_sport">+ Add Sport</string>
	<string name="sport">Sport</string>
	<string name="select_fac">Select Facility/Academy</string>
	<string name="select_type">Select Type</string>
	<string name="type">Type</string>
	<string name="typee">Type:</string>
	<string name="sports_name">Sport Name</string>
	<string name="sports_namee">Sport Name:</string>
	<string name="sport_name_hint">Select Sport</string>
	<string name="court_no">No of Courts</string>
	<string name="number_hint">Number</string>
	<string name="court_type">Select Court</string>
	<string name="court_hint">Enter Number</string>
	<string name="indoor_court">Indoor Courts</string>
	<string name="outdoor_court">Outdoor Courts</string>
	<string name="kit_avail">Kit Available</string>
	<string name="price_per_day">Price/Day</string>
	<string name="indoor_n_outdoor">Indoor/Outdoor</string>
	<string name="indoor_kir_price">Indoor Kit Price</string>
	<string name="outdoor_kit_price">Outdoor Kit Price</string>
	<string name="ifsc_code">IFSC Code</string>
	<string name="ifsc_hint">Enter IFSC Code</string>
	<string name="bank_name">Bank Name</string>
	<string name="bank_name_hint">Enter Bank Name</string>
	<string name="bank_branch">Bank Branch</string>
	<string name="bank_branch_hint">Enter Branch Address</string>
	<string name="account_name">Account Name</string>
	<string name="account_name_hint">Enter Account Name</string>
	<string name="account_number">Account Number</string>
	<string name="sorry_msg">Sorry,your bank details are not valid !</string>
	<string name="request_note">Please enter your valid bank details.</string>
	<string name="dashboard">Dashboard</string>
	<string name="account_info">My Profile</string>
	<string name="slot_n_batch">Slots/Batches</string>
	<string name="booking">Bookings</string>
	<string name="events">Events</string>
	<string name="rating_n_review">Review Summary</string>
	<string name="enquiry">Enquiries</string>
	<string name="notifications">Notifications</string>
	<string name="email_alert">Email Alerts</string>
	<string name="statistics">Statistics</string>
	<string name="logout">Logout</string>
	<string name="my_bookings">Bookings</string>
	<string name="news_letter">News Letter</string>
	<string name="access_code">AVVX91HD81CH59XVHC</string>
	<string name="pay_button">Pay</string>
	<string name="merchant_id">44167</string>
	<string name="currency">Currency</string>
	<string name="amount">Amount</string>
	<string name="redirect_url">Redirect Url</string>
	<string name="cancel_url">Cancel Url</string>
	<string name="rsa_url">RSA Key Url</string>
	<string name="indira_g">Indira Gandhi Stadium</string>
	<string name="nehru_stadium">Nehru Stadium</string>
	<string name="noida_stdm">Noida Stadium</string>
	<string name="greek_park">Greek Park, Kanpur, India</string>
	<string name="change_password">Change Password</string>
	<string name="pay_now">Pay Now</string>
</resources>