<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:itemBackground="@drawable/canvas_drawer_list_selector">

    <group android:id="@+id/nav_group"
        android:checkableBehavior="single"
        android:menuCategory="container"
        android:enabled="true">

        <item
            android:id="@+id/action_dash"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"
            android:checked="true" />

        <item
            android:id="@+id/action_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/account_info" />

        <item
            android:id="@+id/action_slot_batch"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/slot_n_batch" />

		<item
			android:id="@+id/action_booking"
			android:icon="@drawable/ic_supervisor_account_black_24dp"
			android:title="@string/booking" />

       <!-- <item
            android:id="@+id/action_sport"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/sport_booking" />

        <item
            android:id="@+id/action_booking"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/booking_detail" />-->

        <item
            android:id="@+id/action_event_booking"
            android:icon="@drawable/ic_book_black_18dp"
            android:title="@string/events" />

       <!-- <item
            android:id="@+id/action_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/my_events"/>-->

        <item
            android:id="@+id/action_rating"
            android:icon="@drawable/ic_speaker_notes_black_24dp"
            android:title="@string/rating_n_review" />

        <item
            android:id="@+id/action_enquiry"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/enquiry" />

        <item
            android:id="@+id/action_notification"
            android:icon="@drawable/ic_bell"
            android:title="@string/notifications" />

        <item
            android:id="@+id/action_email"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/email_alert" />

        <item
            android:id="@+id/action_stats"
            android:icon="@drawable/ic_assessment"
            android:title="@string/statistics" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout" />

    </group>


</menu>
