<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.socialsportz.Activities.InitialScreenActivity">

	<LinearLayout
		android:id="@+id/search_toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin_45dp"
		android:orientation="horizontal"
		android:background="@drawable/canvas_red_gradient">

		<ImageButton
			android:id="@+id/ib_back"
			android:layout_width="@dimen/margin_40dp"
			android:layout_height="match_parent"
			android:background="@null"
			android:paddingLeft="@dimen/margin_start_vary_5"
			android:layout_gravity="center_vertical"
			android:contentDescription="@string/app_desc"
			android:src="@drawable/ic_keyboard_arrow_left_white"
			android:tint="@color/white" />

		<com.socialsportz.View.PMTextView
			android:id="@+id/tv_page_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/pay_now"
			android:textColor="@color/white"
			android:textSize="@dimen/text_size_xlarge" />
	</LinearLayout>


	<ScrollView

		android:id="@+id/scrollView1"

		android:layout_width="match_parent"
		android:layout_below="@+id/search_toolbar"

		android:layout_height="wrap_content">



		<LinearLayout

			android:layout_width="match_parent"

			android:layout_height="match_parent"

			android:gravity="left"

			android:padding="15dp"

			android:orientation="vertical" >



			<TextView

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="@string/access_code" />



			<EditText

				android:id="@+id/accessCode"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				android:text="YOUR ACCESS CODE OUR HERE" >

				<requestFocus />

			</EditText>



			<TextView

				android:layout_width="wrap_content"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="@string/merchant_id" />



			<EditText

				android:id="@+id/merchantId"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				android:text="YOUR MERCHANT ID OUR HERE "

				/>



			<TextView

				android:layout_width="wrap_content"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="Order Id" />



			<EditText

				android:id="@+id/orderId"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				/>



			<TextView

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="@string/currency" />



			<EditText

				android:id="@+id/currency"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				android:text="INR"

				/>



			<TextView

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="@string/amount" />



			<EditText

				android:id="@+id/amount"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				android:text="1.00"

				/>



			<TextView

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="@string/redirect_url" />



			<EditText

				android:id="@+id/redirectUrl"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				android:inputType="textUri"

				android:text="YOUR REDIRECT URL OUR HERE (ccavResponseHandler.php)"

				/>



			<TextView

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="@string/cancel_url" />



			<EditText

				android:id="@+id/cancelUrl"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				android:inputType="textUri"

				android:text="YOUR CANCEL URL OUR HERE (ccavResponseHandler.php)" />



			<TextView

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:layout_marginTop="10dp"

				android:paddingLeft="10dp"

				android:text="@string/rsa_url" />



			<EditText

				android:id="@+id/rsaUrl"

				android:layout_width="match_parent"

				android:layout_height="wrap_content"

				android:ems="10"

				android:inputType="textUri"

				android:text="YOUR GET RSA URL OUR HERE (GetRSA.php)" />



			<Button

				android:id="@+id/nextButton"

				android:layout_gravity="center"

				android:layout_width="wrap_content"

				android:layout_height="wrap_content"

				android:layout_marginBottom="48dp"

				android:onClick="onClick"

				android:text="@string/pay_button" />

		</LinearLayout>

	</ScrollView>



</RelativeLayout>
