<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/item"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/canvas_round_corner_white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/lock"
            android:contentDescription="@string/app_desc"/>
        
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"
            android:tint="@color/theme_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:orientation="vertical">

            <com.socialsportz.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_gravity="center"
                android:text="@string/forgot"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/text_size_xxlarge"
                android:textAllCaps="false"/>

            <com.socialsportz.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/your_password"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/text_size_xlarge"/>

            <com.socialsportz.View.PRTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_35dp"
                android:layout_marginEnd="@dimen/margin_35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forgot_password_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_regular"/>

            <com.socialsportz.View.PREditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:background="@drawable/canvas_forgot_editext_bg"
                android:drawableStart="@drawable/ic_person"
                android:drawableTint="@color/dark_grey"
                android:drawablePadding="@dimen/margin_15dp"
                android:paddingStart="@dimen/margin_10dp"
                android:paddingEnd="@dimen/margin_10dp"
                android:hint="@string/email_id_hint"
                android:textColorHint="@color/dark_grey"
                android:textColor="@color/dim_black"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_regular"/>

            <com.socialsportz.View.PMButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:background="@drawable/canvas_forgot_btn_bg"
                android:text="@string/forgot_submit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_regular"/>

            <com.socialsportz.View.PRTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:layout_marginBottom="@dimen/margin_15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forgot_password_msg"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/text_size_regular"
                android:visibility="invisible"/>


        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>
