<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/canvas_booking_details_img_bg"
    android:padding="@dimen/margin_start_vary_10"
    android:layout_gravity="center">
    <ImageView
        android:layout_width="@dimen/margin_start_vary_80"
        android:layout_height="@dimen/margin_start_vary_80"
        android:src="@drawable/ic_error_outline_black"
        android:tint="@color/theme_color"
        android:padding="@dimen/margin_5dp"/>
    <com.socialsportz.View.PMTextView
        android:layout_marginTop="@dimen/margin_start_vary_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_regular"
        android:text="@string/sorry_msg"
        android:textColor="@color/black"/>
    <com.socialsportz.View.PRTextView
        android:layout_marginTop="@dimen/margin_start_vary_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="@string/request_note"
        android:textColor="@color/dim_grey"/>
    <com.socialsportz.View.PMTextView
        android:id="@+id/ok"
        android:layout_marginTop="@dimen/margin_start_vary_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/canvas_ok_red_bg_style"
        android:textSize="@dimen/text_size_xxlarge"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingStart="@dimen/margin_start_vary_8"
        android:paddingEnd="@dimen/margin_start_vary_8"/>

</LinearLayout>
